@@ -1,0 +1,5 @@
+{
+  "NAVIGATION": {
+    "PRIVILEGES": "Privileges"
+  }
+}
