@@ -64,6 +64,7 @@
   align-items: center;
   padding-right: 10px;
   padding-left: 10px;
+  cursor: pointer;
 }
 
 .status-bar__user > div {
