@@ -11,6 +11,8 @@ Breaking Changes
 Changes
 -------
 
+ - Added Privileges plugin for the Enterprise Edition.
+
  - The documentation link now points to the documentation for the major.minor
    (e.g. 2.1) version of CrateDB, instead of major.minor.hotfix (e.g. 2.1.1).
 
